# uniquesurface

./: .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CODEBASE_ASSESSMENT.md  CONTRIBUTING.md  PLAN.md  README.md  flake.nix  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  upstream-canary.yml
docs/: config-reference.md  migration-from-shell.md
docs/design/: override-mechanisms.md
gui/: Makefile  README.md  embed.go  go.mod  main.go  main_test.go  manifest.go  manifest_test.go
gui/frontend/: index.html
gui/packaging/pkgconfig/: webkit2gtk-4.0.pc
src/trinity/: __init__.py  __main__.py  atomic.py  cli.py  config.py  exit_codes.py  logging.py  logging_setup.py  manifest.py  orchestrator.py  paths.py  refresh_state.py  schema.py
src/trinity/backends/: __init__.py  _kconfig.py  base.py  desktop.py  lock.py  login.py  sddm_fork.py
src/trinity/providers/: README.md  __init__.py
src/trinity/providers/builtin/: _http.py  bing.py  file.py  json_api.py  rss.py  solid.py
src/trinity/systemd/: __init__.py  network_dispatcher.py  writer.py
src/trinity/theme/: drift.py  extract.py  font_install.py  qml_patch.py  qmllint.py
src/trinity/theme/descriptors/: __init__.py  _schema.py  plasma_lockscreen_mainblock_6.toml  plasma_lockscreen_ui_6.toml  sddm_login_6.toml
src/usurface/: __init__.py  __main__.py  atomic.py  cli.py  config.py  logging.py  manifest.py  orchestrator.py  paths.py  schema.py
src/usurface/backends/: _kconfig.py  base.py  desktop.py  lock.py  login.py
src/usurface/providers/: README.md  __init__.py
src/usurface/providers/builtin/: __init__.py  bing.py  file.py  solid.py
src/usurface/systemd/: __init__.py  writer.py
src/usurface/theme/: __init__.py  drift.py  extract.py  font_install.py  qml_patch.py  tokens.py
src/usurface/theme/fonts/: __init__.py
tests/: conftest.py  test_atomic.py  test_backends_desktop.py  test_backends_lock.py  test_backends_login.py  test_cli.py  test_cli_coverage.py  test_config.py  test_cycle.py  test_descriptors.py  test_drift.py  test_exit_codes.py  test_font_install.py  test_graceful_failure.py  test_kconfig_qdbus.py  test_main.py  test_manifest.py  test_network_dispatcher.py  test_orchestrator_clock.py  test_orchestrator_coverage.py  test_orchestrator_drift.py  test_orchestrator_fork.py  test_paths.py  test_properties.py  test_providers.py  test_qml_clock_position.py  test_qml_patch.py  test_qmllint.py  test_refresh.py  test_remediation_coverage.py  test_sddm_fork.py  test_systemd.py
tests/canary/: __init__.py  test_descriptor_anchors.py
tests/fixtures/: sample_config.toml  sample_login.qml  sample_mainblock.qml
