[project]
name = "uniquesurface"
version = "0.1.0"
description = "Unified Plasma 6 surface set manager (desktop, lock, login wallpapers)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "PolyForm Noncommercial 1.0.0" }
authors = [{ name = "matt" }]
keywords = ["kde", "plasma", "sddm", "wallpaper", "lockscreen"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: Other/Proprietary License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment",
]

dependencies = [
  "pydantic>=2.6,<3",
  "httpx>=0.27,<1",
  "Pillow>=10.3,<12",
  "platformdirs>=4.2,<5",
  "structlog>=24.1,<25",
  "pluggy>=1.5,<2",
  "click>=8.1,<9",
]

[project.scripts]
usurface = "usurface.cli:run"

[dependency-groups]
dev = [
  "ruff>=0.8",
  "mypy>=1.10",
  "fonttools>=4.5",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<6",
  "respx>=0.21,<1",
  "syrupy>=4.6,<5",
]

[build-system]
requires = ["hatchling>=1.24,<2"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: requires a real Plasma session (skipped if no DISPLAY/WAYLAND_DISPLAY)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/usurface"]

[tool.hatch.build.targets.sdist]
include = [
  "src/usurface",
  "tests",
  "README.md",
  "PLAN.md",
  "pyproject.toml",
]