[project]
name = "trinity"
version = "0.1.0"
description = "Trinity — unified Plasma 6 surface set manager (desktop, lock, login wallpapers)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "PolyForm Noncommercial 1.0.0" }
authors = [{ name = "matt" }]
keywords = ["kde", "plasma", "sddm", "wallpaper", "lockscreen"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: Other/Proprietary License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment",
]

dependencies = [
  "pydantic>=2.6,<3",
  "httpx>=0.27,<1",
  "Pillow>=10.3,<12",
  "platformdirs>=4.2,<5",
  "structlog>=24.1,<25",
  "pluggy>=1.5,<2",
  "click>=8.1,<9",
]

[project.scripts]
trinity = "trinity.cli:run"

[dependency-groups]
dev = [
  "ruff>=0.8",
  "mypy>=1.10",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<6",
  "respx>=0.21,<1",
  "syrupy>=4.6,<5",
]

[build-system]
requires = ["hatchling>=1.24,<2"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: requires a real Plasma session (skipped if no DISPLAY/WAYLAND_DISPLAY)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trinity"]

[tool.hatch.build.targets.sdist]
include = [
  "src/trinity",
  "tests",
  "README.md",
  "PLAN.md",
  "pyproject.toml",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Core rules that catch real bugs and enforce consistency.
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
]
# SIM (flake8-simplify) is useful but too opinionated for this codebase
# (try/except/pass is clearer than contextlib.suppress in cleanup paths).
# E501 is handled by ruff format, not manual line-wrapping.

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "B017"]  # assert False / blind exception OK in tests
"src/trinity/theme/drift.py" = ["E402"]  # intentional late import to avoid circular

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true