[project]
name = "trinity"
dynamic = ["version"]
description = "Trinity — unified Plasma 6 surface set manager (desktop, lock, login wallpapers)."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "matt" }]
keywords = ["kde", "plasma", "sddm", "wallpaper", "lockscreen"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Desktop Environment",
  "Typing :: Typed",
]

dependencies = [
  "pydantic>=2.6,<3",
  "httpx>=0.27,<1",
  "Pillow>=10.3,<12",
  "platformdirs>=4.2,<5",
  "structlog>=24.1,<26",
  "pluggy>=1.5,<2",
  "click>=8.1,<9",
  "packaging>=24,<26",  # PEP 440 / version range parsing for QML descriptors
  "defusedxml>=0.7,<1",  # hardened XML parsing for the rss provider (XXE/billion-laughs)
]

[project.urls]
Homepage = "https://github.com/MattCreigh/trinity_background_manager"
Repository = "https://github.com/MattCreigh/trinity_background_manager"
Changelog = "https://github.com/MattCreigh/trinity_background_manager/blob/main/CHANGELOG.md"

[project.scripts]
trinity = "trinity.cli:run"

# PEP 735 dependency groups: not published as PyPI extras (a "test" extra on
# an end-user CLI is packaging noise). Install with `uv sync --group test`.
[dependency-groups]
dev = [
  "ruff>=0.8",
  "mypy>=1.10",
]
test = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<8",
  "respx>=0.21,<1",
  "hypothesis>=6.100,<7",
]

[build-system]
# hatchling >= 1.27 is required for PEP 639 license expressions.
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/trinity/__init__.py"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
# Exclude ``tests/canary`` from the default run: the canary tests
# require upstream QML files fetched by the GitHub Actions workflow
# ``Upstream Canary`` (see .github/workflows/upstream-canary.yml)
# and would skip (or fail to collect) without them.  The workflow
# invokes ``pytest tests/canary/`` directly.
testpaths = ["tests"]
norecursedirs = ["tests/canary", ".hypothesis"]
markers = [
  "integration: requires a real Plasma session (skipped if no DISPLAY/WAYLAND_DISPLAY)",
  "canary: requires upstream QML files; run via the Upstream Canary workflow",
]

[tool.coverage.run]
source = ["trinity"]
branch = true

[tool.coverage.report]
# Floor for CI (`pytest --cov`); raise as coverage improves, never lower.
fail_under = 75
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trinity"]

[tool.hatch.build.targets.sdist]
include = [
  "src/trinity",
  "tests",
  "docs",
  "README.md",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "PLAN.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Core rules that catch real bugs and enforce consistency.
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "ISC",  # implicit string concatenation (silent bugs in string lists)
  "PIE",  # misc lints (duplicate class fields, pointless statements)
  "RUF",  # ruff-native rules (mutable class defaults, unused noqa, ...)
]
# SIM (flake8-simplify) is useful but too opinionated for this codebase
# (try/except/pass is clearer than contextlib.suppress in cleanup paths).
# E501 is handled by ruff format, not manual line-wrapping.

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "B017"]  # assert False / blind exception OK in tests

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# defusedxml ships no type stubs; its API mirrors xml.etree.ElementTree.
module = ["defusedxml.*"]
ignore_missing_imports = true
